# gg-retro

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: main.rs
docs/: flows.md  protocol.md
protocol/: Cargo.toml
protocol/src/: codec.rs  codec_helpers.rs  consts.rs  error.rs  hash.rs  lib.rs
protocol/src/packets/: login.rs  message.rs  mod.rs  notify.rs
protocol/src/snapshots/: gg_protocol__codec__tests__it_handles_login60_packet.snap.packet  gg_protocol__codec__tests__it_handles_login_ok_packet.snap  gg_protocol__codec__tests__it_handles_message_with_italic_and_underline.snap.packet  gg_protocol__codec__tests__it_handles_new_status_packet.snap.packet  gg_protocol__codec__tests__it_handles_new_status_packet_without_description.snap.packet  gg_protocol__codec__tests__it_handles_notify_first_packet.snap.packet  gg_protocol__codec__tests__it_handles_notify_last_packet.snap.packet  gg_protocol__codec__tests__it_handles_notify_reply60_packet.snap.packet  gg_protocol__codec__tests__it_handles_recv_message_packet.snap.packet  gg_protocol__codec__tests__it_handles_recv_message_with_multiple_formats.snap.packet  gg_protocol__codec__tests__it_handles_send_message_ack_packet.snap.packet  gg_protocol__codec__tests__it_handles_send_message_packet.snap.packet  gg_protocol__codec__tests__it_handles_send_message_with_bold_formatting.snap.packet  gg_protocol__codec__tests__it_handles_send_message_with_polish_chars.snap.packet  gg_protocol__codec__tests__it_handles_status60_packet.snap.packet  gg_protocol__codec__tests__it_handles_welcome_packet.snap.packet  gg_protocol__hash__tests__it_hashes_password.snap
server/: Cargo.toml
server/debian/: config.toml  gg-retro.service  postinst
server/migrations/: 20251227104911_createUsers.sql  20251231120000_createTokens.sql  20251231135137_createMessages.sql  20260102083950_addFormatting.sql
server/src/: banner.rs  core.rs  main.rs
server/src/api/: appmsg.rs  captcha.rs  mod.rs  register.rs  sendpwd.rs  web.rs
server/src/messenger/: contact_book.rs  messages.rs  mod.rs  presence.rs  session.rs
server/src/models/: message.rs  mod.rs  token.rs  user.rs
server/static/: ads.css  main.js  patcher.js  style.css
server/templates/: ads.html  home.html
