[package]
name = "gg-client"
version = "0.1.0"
edition = "2024"

[dependencies]
gg-protocol = { path = "../protocol" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3.31"
rand = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"