[package]
name = "gg-protocol"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty-hex = "0.4.1"
hex-literal = "1.1.0"
bytes = "1.11.0"
tokio-util = { version = "0.7.17", features = ["codec"] }
thiserror = "2.0.17"
rand = "0.9.2"
tracing = "0.1"
encoding_rs = "0.8.35"

[dev-dependencies]
claims = "0.8"
insta = "1.45.0"
