[package]
name = "gg-server"
version = "0.3.0"
edition = "2024"
description = "Serwer protokolu Gadu-Gadu 6.0"
license = "MIS"
authors = ["macbury"]
repository = "https://github.com/macbury/gg-retro"

[[bin]]
name = "gg-retro"
path = "src/main.rs"

[package.metadata.deb]
name = "gg-retro"
maintainer = "macbury"
copyright = "2026, macbury"
extended-description = """Reimplementacja serwera protokolu Gadu-Gadu 6.0.
Umozliwia uruchomienie wlasnego serwera kompatybilnego z oryginalnym klientem GG 6.0."""
section = "net"
priority = "optional"
assets = [
    ["target/release/gg-retro", "usr/bin/", "755"],
    ["debian/config.toml", "etc/gg-retro/config.toml", "644"],
    ["debian/gg-retro.service", "lib/systemd/system/gg-retro.service", "644"],
]
conf-files = ["/etc/gg-retro/config.toml"]
maintainer-scripts = "debian/"
depends = "$auto"

[dependencies]
gg-protocol = { path = "../protocol" }
axum = "0.8.8"
tracing-subscriber = "0.3.22"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3.31"
rand = "0.9.2"
tracing = "0.1.44"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6", features = ["trace"] }
local-ip-address = "0.6.8"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "migrate" ] }
parking_lot = "0.12.5"
tokio-stream = {  version = "0.1.17", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["gif"] }
imageproc = "0.25"
ab_glyph = "0.2"
figment = { version = "0.10.19", features = ["toml", "env"] }
askama = "0.14.0"
rust-embed = "8.9"
axum-embed = "0.1"